Fix the volunteer ops on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -188,7 +188,7 @@ a {
 	text-wrap: balance;
 }
 .pageDescription {
-	font-size: clamp(1rem, 2vw, 1.5rem);
+	font-size: clamp(1.2rem, 2vw, 1.5rem);
 	margin: 2rem 0;
 }
 .phoneNumber {
